[tool.poetry]
name = "Sulfur"
version = "0.2.0"
description = "A python based TUI music player"
authors = ["Harry Eldridge <heldridge@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mutagen = "^1.45.1"
python-vlc = "^3.0.11115"
urwid = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
